fixed mobile text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ header p{
   /*Your code here:*/
   /*Align the content in the center */
   margin: auto;
-  text-align: center;
+  text-align: left;
 }
 
 
